# afm-net-short-scraper

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: scrape.yml
app/: charts.py  components.py  data.py  main.py
data/: 2026-04-01.csv  2026-04-02.csv  2026-04-03.csv  2026-04-06.csv  2026-04-07.csv  2026-04-08.csv  2026-04-09.csv  2026-04-10.csv  2026-04-13.csv  2026-04-14.csv  2026-04-15.csv  2026-04-16.csv  2026-04-17.csv  2026-04-20.csv  2026-04-21.csv  2026-04-22.csv  2026-04-23.csv  2026-04-24.csv  2026-04-27.csv  2026-04-28.csv  2026-04-29.csv  2026-04-30.csv  2026-05-01.csv  2026-05-04.csv  2026-05-05.csv  2026-05-06.csv  2026-05-07.csv  2026-05-08.csv  2026-05-11.csv  2026-05-12.csv  2026-05-13.csv  2026-05-14.csv  2026-05-15.csv  2026-05-18.csv  2026-05-19.csv  2026-05-20.csv  2026-05-21.csv  2026-05-22.csv  2026-05-25.csv  2026-05-26.csv  (+42 more)
src/analytics/: aggregator.py
src/scraper/: config.py  fetcher.py  logging_setup.py  main.py  parser.py  scheduler.py  storage.py
tests/: test_scraper.py
